# qt-wallet-poc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
qml/: Main.qml
qml/components/: SeedGrid.qml
src/: WalletSimulator.cpp  WalletSimulator.h  main.cpp
